--- a/node/src/public/asset/css/aboutus.css
+++ b/node/src/public/asset/css/aboutus.css
@@ -110,7 +110,6 @@ header nav ul li a{
 #banner{
     width: 100%;
     height: 210px;
-
     padding: 10px 10px 50px 0px;
     display: flex;
     gap:30px;
@@ -118,14 +117,15 @@ header nav ul li a{
     align-items: center;
 }
 #banner img{
-    width: 190px;
-    height: 200px;
+    width: 150px;
+    height: 180px;
     display: block;
 
 }
 
 #banner p{
     font-size: 19px;
+    padding-top: 35px;
     font-family: "Caveat", cursive;
 }
 
@@ -536,8 +536,8 @@ button {
 
 /* 🎨 Heading font + dynamic color per card */
 .card h1 {
-	font-family: var(--heading-font);
-	font-size: 1.6rem;
+
+	font-size: 1.4rem;
 	margin-bottom: 0.5rem;
 	letter-spacing: 1px;
 }
@@ -637,6 +637,13 @@ button {
     background-position: center;
     background-repeat: no-repeat;
     height: 90vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 30px;
+    position: relative;
 }
 
 .img-thumbnail {
