--- a/node/src/public/asset/css/aboutus.css
+++ b/node/src/public/asset/css/aboutus.css
@@ -112,13 +112,13 @@ header nav ul li a{
     height: 210px;
     padding: 10px 10px 50px 0px;
     display: flex;
-    gap:30px;
+    gap:25px;
     justify-content: space-between;
     align-items: center;
 }
 #banner img{
-    width: 150px;
-    height: 180px;
+    width: 210px;
+    height: 190px;
     display: block;
 
 }
@@ -673,10 +673,14 @@ footer{
     background-size: 100% 100%;
     background-position: center;
     background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 250px;
 }
 footer #social{
     width: 100%;
+    margin-top: 10px;
     height: auto;
     padding: 15px;
     display: flex;
